force-app/main/default/objects/Financial_Summary_Setting__mdt/Financial_Summary_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used to Show/Hide Financial Summary Details. Ex - Total Customer Balance, Total Limit</description>
    <label>Financial Summary Setting</label>
    <pluralLabel>Financial Summary Settings</pluralLabel>
</CustomObject>