force-app/main/default/objects/Financial_Summary_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Active-Deactive setup</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>