force-app/main/default/objects/Financial_Summary_Setting__mdt/fields/Summary_Name__c.field-meta.xml
<CustomField>
    <fullName>Summary_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Summary Name</description>
    <label>Summary Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>