force-app/main/default/objects/Financial_Summary_Setting__mdt/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>List of User profile separated by ;</description>
    <inlineHelpText>List of User profile separated by ;</inlineHelpText>
    <label>User Profile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>